--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "description": "react app for TTRPG Session Manager",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
+  },
   "devDependencies": {
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.2",
     "vite": "^6.2.0"
   }
 }
