--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "scripts": {
     "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "start:server": "cd server && npm start",
-    "start:client": "cd client-app && npm start",
+    "start:client": "cd client && npm run preview",
     
-    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:all": "concurrently \"npm run dev:server:watch\" \"npm run dev:client\"",
     "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client-app && npm run dev",
+    "dev:server:watch": "cd server && npm run dev:watch",
+    "dev:client": "cd client && npm run dev",
+
+    "build:all": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
 
     "install:all": "npm install && npm run install:server && npm run install:client",
     "install:server": "cd server && npm install",
-    "install:client": "cd client-app && npm install"
+    "install:client": "cd client && npm install"
   },
   "repository": {
     "type": "git",
@@ -22,7 +27,8 @@
   },
   "author": "Tom zayev",
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "typescript": "^5.2.2"
   },
   "bugs": {
     "url": "https://github.com/tom-zv/TTRPG-Session-Manager/issues"
