--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/multer":"1.4.12",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
