Refactor UI components and implement drag-and-drop functionality
-Improve component structure and naming
-Enhance type definitions and interfaces
-Implement selection logic and drag-and-drop functionality
-Add music metadata support
-Various styling improvements and code cleanup

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,7 +6,11 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "shared/*": ["../shared/*"],  // Path is relative to client directory
+      "src/*": ["./src/*"]
+    }
   },
-  "include": ["src", "../shared/types/","vite.config.ts"]
+  "include": ["src", "../shared/types","vite.config.ts"]
 }
