Implement collections architecture with drag-and-drop functionality
- Refactor SFX sets and ambience sets to unified collections system
- Restructure API and component architecture
- Add comprehensive drag-and-drop support with multi-select and reordering

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,11 @@
     "outDir": "./dist",
     "rootDir": "../",
     "declaration": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "shared/*": ["../shared/*"],  // Path is relative to client directory
+      "src/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts", "../shared/**/*.ts"],
   "exclude": ["node_modules", "dist"]
