--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,19 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.72.1",
+    "howler": "^2.2.4",
+    "mitt": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.72.1",
+    "@types/howler": "^2.2.12",
     "@types/node": "^22.13.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
