--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,18 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.12.0",
     "multer": "^1.4.5-lts.1",
-    "music-metadata": "^11.0.0"
+    "music-metadata": "^11.0.0",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "1.4.12",
     "@types/node": "^20.10.5",
-    "@types/multer":"1.4.12",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
