Refactor codebase structure and enhance file management
- Reorganize audio service folder structure and API endpoints
- Consolidate types into unified files and update import paths
- Split queries into modular files for better organization
- Enhance file update functionality with comprehensive parameters
- Implement editing mutations with dirty field tracking
- Add file-system renaming and various performance improvements

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,9 @@
     "resolveJsonModule": true,
     "paths": {
       "shared/*": ["../shared/*"],  // Path is relative to client directory
-      "src/*": ["./src/*"]
+      "src/*": ["./src/*"],
+      "client/*": ["../client/*"],
+      
     }
   },
   "include": ["src/**/*.ts", "../shared/**/*.ts"],
