--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^11.0.0",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
