--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.72.1",
