--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^11.0.0",
     "mysql2": "^3.12.0",
+    "socket.io": "^4.8.1",
     "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
