Enhance development tooling and implement advanced download system
- Add comprehensive error handling middleware and HTTP error classes
- Implement worker threads for concurrent file downloads with job tracking
- Add download event management system with socket integration
- Add development dependencies for concurrency management and environment handling
- Implement DTO transformers for better data handling

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,9 +8,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "shared/*": ["../shared/*"],  // Path is relative to client directory
+      "shared/*": ["../shared/*"],
       "src/*": ["./src/*"]
     }
   },
-  "include": ["src", "../shared/types","vite.config.ts"]
+  "include": ["src", "../shared", "vite.config.ts"]
 }
