--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
-    "start:server": "cd server && npm start",
-    "start:client": "cd client && npm run preview",
-    "dev:all": "concurrently \"npm run dev:server:watch\" \"npm run dev:client\"",
-    "dev:server": "cd server && npm run dev",
-    "dev:server:watch": "cd server && npm run dev:watch",
-    "dev:client": "cd client && npm run dev",
-    "build:all": "npm run build:client && npm run build:server",
-    "build:client": "cd client && npm run build",
-    "build:server": "cd server && npm run build",
+    "start": "cross-env NODE_ENV=production concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start:server": "cd server && cross-env NODE_ENV=production npm start",
+    "start:client": "cd client && cross-env NODE_ENV=production npm run preview",
+    "dev:all": "cross-env NODE_ENV=development concurrently \"npm run dev:server:watch\" \"npm run dev:client\"",
+    "dev:server": "cd server && cross-env NODE_ENV=development npm run dev",
+    "dev:server:watch": "cd server && cross-env NODE_ENV=development npm run dev:watch",
+    "dev:client": "cd client && cross-env NODE_ENV=development npm run dev",
+    "build:all": "cross-env NODE_ENV=production npm run build:client && npm run build:server",
+    "build:client": "cd client && cross-env NODE_ENV=production npm run build",
+    "build:server": "cd server && cross-env NODE_ENV=production npm run build",
     "install:all": "npm install && npm run install:server && npm run install:client",
     "install:server": "cd server && npm install",
     "install:client": "cd client && npm install",
@@ -33,6 +33,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.27.0",
     "eslint-import-resolver-typescript": "^4.3.5",
     "eslint-plugin-import": "^2.31.0",
