--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/multer": "1.4.12",
     "@types/node": "^20.10.5",
     "nodemon": "^3.1.9",
+    "p-limit": "^6.2.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
