--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "resolveJsonModule": true,
     "paths": {
-      "shared/*": ["../shared/*"],  // Path is relative to client directory
+      "shared/*": ["../shared/*"],
       "src/*": ["./src/*"],
       "client/*": ["../client/*"],
       
