Implement app hosting configs - localhost, LAN, Internet

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,10 @@
+# Server Configuration
+HOST=localhost
+PORT=3000
+CLIENT_ORIGIN=http://localhost:5173
 
+# DB Configuration
 DB_HOST=host
 DB_USER=drizzt
 DB_PASSWORD=do'urden
-DB_NAME=DINDI
 DB_PORT=3306
-
-# Server Configuration
-PORT=9999
